--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,13 @@
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>4.0.0-alpha-2</version>
+    <version>4.0.0-alpha-3</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>3.7.1</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
@@ -29,6 +35,11 @@
     <artifactId>poi-ooxml</artifactId>
     <version>4.1.1</version>
 </dependency>
+      <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>6.14.2</version>
+      </dependency>
 
   </dependencies>
   <build>
